sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/Setup_Connection_Data__mdt.object-meta.xml
<CustomObject>
    <label>Setup Connection Data</label>
    <pluralLabel>Setup Connection Data</pluralLabel>
</CustomObject>