sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>