sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Enable_Apex_Debug__c.field-meta.xml
<CustomField>
    <fullName>Enable_Apex_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Developer config to turn on apex debug logging. This should only ever be false in production.</description>
    <inlineHelpText>Developer config to turn on apex debug logging. This should only ever be false in production.</inlineHelpText>
    <label>Enable Apex Debugging</label>
    <type>Checkbox</type>
</CustomField>