sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Enable_JS_Debug__c.field-meta.xml
<CustomField>
    <fullName>Enable_JS_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables the JavaScript debugger output. Should only ever be disabled in production.</description>
    <inlineHelpText>Enables the JavaScript debugger output. Should only ever be disabled in production.</inlineHelpText>
    <label>Enable JavaScript Debugging</label>
    <type>Checkbox</type>
</CustomField>