sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Global_Key__c.field-meta.xml
<CustomField>
    <fullName>Global_Key__c</fullName>
    <description>The key required to register a connection with the Stripe Billing Connector platform.</description>
    <inlineHelpText>The key required to register a connection with the Stripe Billing Connector platform.</inlineHelpText>
    <label>Global Key</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>