sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Local_Authorization_Target__c.field-meta.xml
<CustomField>
    <fullName>Local_Authorization_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Redirect browser authentication to http://localhost:3100</description>
    <inlineHelpText>Redirect browser authentication to http://localhost:3100</inlineHelpText>
    <label>Local Authorization Target</label>
    <type>Checkbox</type>
</CustomField>