sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Middleware_Infrastructure_Version__c.field-meta.xml
<CustomField>
    <fullName>Middleware_Infrastructure_Version__c</fullName>
    <defaultValue>&quot;v1&quot;</defaultValue>
    <description>This is the version of middleware infrastructure to use for making calls to the middleware. Currently defaults to v1 if no value is set.</description>
    <inlineHelpText>This is the version of middleware infrastructure to use for making calls to the middleware. Currently defaults to v1 if no value is set.</inlineHelpText>
    <label>Middleware Infrastructure Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
                <default>true</default>
                <label>v1</label>
            </value>
            <value>
                <fullName>v2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>