sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/OAuth_AutoClose_Window__c.field-meta.xml
<CustomField>
    <fullName>OAuth_AutoClose_Window__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Disabling this will leave the auth window open for debugging. Should only ever be enabled in production.</description>
    <inlineHelpText>Disabling this will leave the auth window open for debugging. Should only ever be enabled in production.</inlineHelpText>
    <label>AutoClose OAuth Window</label>
    <type>Checkbox</type>
</CustomField>