sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/OAuth_State_Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>OAuth_State_Signing_Key__c</fullName>
    <defaultValue>"98ae2216688a8b879c25f17ed793bfa7bb11201ddda97ad01b2d282a06aa191a"</defaultValue>
    <description>Generate with: System.debug(EncodingUtil.convertToHex(Crypto.generateAesKey(256)));</description>
    <inlineHelpText>This is the Shared Key to use for signing the state JWT passed to platform.</inlineHelpText>
    <label>OAuth State Encryption Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>