sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Platform_Target__c.field-meta.xml
<CustomField>
    <fullName>Platform_Target__c</fullName>
    <defaultValue>&quot;https://salesforce-connector.stripe.com&quot;</defaultValue>
    <description>The platform URL the connector will call. Dev value will be dynamically given from whatever tool you are using to expose your server.</description>
    <inlineHelpText>The platform URL the connector will call.</inlineHelpText>
    <label>Platform Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>