sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Salesforce_Connected__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce Connected</label>
    <type>Checkbox</type>
</CustomField>