sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Stripe_Connected__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stripe Connected</label>
    <type>Checkbox</type>
</CustomField>