sfdx/force-app/main/default/objects/Setup_Connection_Data__mdt/fields/Use_Local_OpenAPI_Spec__c.field-meta.xml
<CustomField>
    <fullName>Use_Local_OpenAPI_Spec__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Developer config to target using an openapi.json from Salesforce assets. This should only ever be false in production.</description>
    <inlineHelpText>Developer config to target using an openapi.json from Salesforce assets. This should only ever be false in production.</inlineHelpText>
    <label>Use Local OpenAPI Spec</label>
    <type>Checkbox</type>
</CustomField>